--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -184,7 +184,7 @@
     right: 16%;
   }
   .preview-galley-v2 .image-4 img {
-    margin-top: -30px;
+    margin-top: -90px;
   }
   .fancy-icon-boxes-v1 .fancy-icon-box {
     padding: 45px 35px;
@@ -232,7 +232,7 @@
     margin-left: auto;
   }
   .preview-galley-v4 img.preview-image-3 {
-    top: 45px;
+    top: -8%;
   }
   .testimonial-boxes-v1 .testimonial-box {
     padding: 45px 30px;
@@ -532,6 +532,7 @@
   .hero-area-v4 .hero-preview-galley .preview-inner img.image-3 {
     right: auto;
     left: 79px;
+    width: auto;
   }
   .hero-area-v4 .hero-preview-galley .preview-inner img.image-2 {
     right: auto;
@@ -643,7 +644,9 @@
 
 @media (max-width: 767px) {
   .template-btn {
-    padding: 14px 28px;
+    align-items: center;
+    width: 100%;
+    text-align: center;
   }
   .hero-area-v1 .hero-content {
     padding-top: 110px;
@@ -721,7 +724,7 @@
     height: 520px;
   }
   .hero-area-v4 .hero-preview-galley .preview-inner img.image-3 {
-    max-width: 200px;
+    max-width: 50%;
   }
   .hero-area-v4 .hero-preview-galley .preview-inner img.image-2 {
     max-width: 220px;
@@ -997,7 +1000,7 @@
     right: -10px;
   }
   .preview-galley-v4 {
-    width: 90%;
+    width: 95%;
   }
   .fancy-icon-boxes-v2 .fancy-icon-box {
     -webkit-box-orient: vertical;
@@ -1328,14 +1331,35 @@
   .hero-area-v4 .hero-preview-galley {
     display: none;
   }
+
+  .preview-galley-v4 img.preview-image-2 {
+    position: absolute;
+    z-index: 1;
+    left: 84%;
+    top: 35%;
+    max-width: 150px;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
   .preview-galley-v4 img.preview-image-3 {
     max-width: 150px;
-    left: -15px;
+    left: 0%;
+    top: 15%;
   }
   .preview-galley-v4 img.preview-image-4 {
-    max-width: 180px;
-    right: -15px;
+    max-width: 135px;
+    right: -20px;
+    bottom: 65px;
   }
+
+  .preview-galley-v4 img.preview-image-5 {
+    max-width: 150px;
+    right: 50%;
+    bottom: 71px;
+  }
+
   .fancy-icon-boxes-v2 .fancy-icon-box {
     padding: 45px 30px;
   }
@@ -1569,4 +1593,64 @@
   .sign-in-up-wrapper .form-title {
     font-size: 22px;
   }
+}
+
+/* Estilos para pantallas grandes (más de 992px de ancho) */
+@media (min-width: 993px) {
+  #flexible {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .col-lg-6 {
+    padding-top: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .title {
+    font-size: 2rem; /* Tamaño de fuente más grande */
+  }
+
+  /* Agrega más estilos según sea necesario para pantallas grandes */
+}
+
+/* Estilos para pantallas medianas (entre 768px y 992px de ancho) */
+@media (min-width: 768px) and (max-width: 992px) {
+  #flexible {
+    padding-top: 50px; /* Ajusta el espacio superior */
+    padding-bottom: 50px; /* Ajusta el espacio inferior */
+  }
+
+  .col-lg-6 {
+    padding-top: 50px; /* Ajusta el espacio superior */
+    padding-left: 10px; /* Ajusta el espacio izquierdo */
+    padding-right: 10px; /* Ajusta el espacio derecho */
+  }
+
+  .title {
+    font-size: 1.5rem; /* Tamaño de fuente mediano */
+  }
+
+  /* Agrega más estilos según sea necesario para pantallas medianas */
+}
+
+/* Estilos para pantallas pequeñas (menos de 768px de ancho) */
+@media (max-width: 767px) {
+  #flexible {
+    padding-top: 30px; /* Ajusta el espacio superior */
+    padding-bottom: 30px; /* Ajusta el espacio inferior */
+  }
+
+  .col-lg-6 {
+    padding-top: 30px; /* Ajusta el espacio superior */
+    padding-left: 10px; /* Ajusta el espacio izquierdo */
+    padding-right: 10px; /* Ajusta el espacio derecho */
+  }
+
+  .title {
+    font-size: 1.2rem; /* Tamaño de fuente más pequeño */
+  }
+
+  /* Agrega más estilos según sea necesario para pantallas pequeñas */
 }
